# raytrace

./: .ycm_extra_conf.py  CMakeLists.txt  input.txt  readme.md
src/: args.c  args.h  color.h  light.h  main.c  material.h  preview.c  preview.h  ray.h  raytrace.c  raytrace.h  sphere.c  sphere.h  utils.c  utils.h  vector.c  vector.h
